--- a/SpaceWay/Views/Reservations/NewReservation.cshtml
+++ b/SpaceWay/Views/Reservations/NewReservation.cshtml
@@ -78,7 +78,12 @@
                 </dt>
 
                 <dd>
-                    @Html.EditorFor(model => model.NumOfTickets)
+
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.NumOfTickets, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.NumOfTickets, "", new { @class = "text-danger" })
+                        </div>
+
                 </dd>
             </dl>
         </div>
