--- a/SpaceWay/Views/Shared/LoggedInNavBar.cshtml
+++ b/SpaceWay/Views/Shared/LoggedInNavBar.cshtml
@@ -22,7 +22,7 @@
 
 <li class="nav-item">
     @if (checkAdmin() == true)
-    {<a class="nav-link js-scroll-trigger" href='@Url.Action("Search", "Passengers")'>Passengers</a>}
+    {<a class="nav-link js-scroll-trigger" href='@Url.Action("Index", "Passengers")'>Passengers</a>}
 </li>
 
 @if (checkAdmin() == true)
