--- a/SpaceWay/Views/Passengers/Delete.cshtml
+++ b/SpaceWay/Views/Passengers/Delete.cshtml
@@ -3,70 +3,77 @@
 @{
     ViewBag.Title = "Delete";
 }
+@if ((string)Session["isAdmin"] == "0" || Session["Username"] == null)
+{
+    <h4>You have no permissions to display this page.</h4>
+}
+else
+{
+    <h2>Delete</h2>
 
-<h2>Delete</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Passenger</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Passenger</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Username)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Username)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Username)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Username)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Password)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Password)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Password)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Stars)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Stars)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Stars)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Stars)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.IsAdmin)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IsAdmin)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.IsAdmin)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.IsAdmin)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.TotalDistance)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalDistance)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.TotalDistance)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.TotalDistance)
-        </dd>
+        </dl>
 
-    </dl>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
-</div>
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
+}
