--- a/SpaceWay/Views/Passengers/PassengerProfile.cshtml
+++ b/SpaceWay/Views/Passengers/PassengerProfile.cshtml
@@ -3,57 +3,63 @@
 @{
     ViewBag.Title = "PassengerProfile";
 }
-
-<h2>@Session["Username"]</h2>
-
-<div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Username)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Username)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Stars)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Stars)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalDistance)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TotalDistance)
-        </dd>
-
-        @Html.ActionLink("Edit Information", "PassengerEdit", new { id = Model.PassengerID })
-
-        <dd>
-            <div id="divCanvas">
-                <canvas id='myCanvas' width='1000' height='150'></canvas>
-            </div>
-        </dd>
-
-    </dl>
-</div>
-<!--canvas spaceship -->
-@*@Scripts.Render("~/Content/js/canvas.js")*@
-@section Scripts{
-    <script src="~/Content/js/canvas.js"></script>
-    <script>$(document).ready(canvasFunc());</script>
+@if (Session["Username"] == null)
+{
+    <h4>You are not logged in.</h4>
 }
+else
+{
+    <h2>@Session["Username"]</h2>
+
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Username)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Username)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Stars)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Stars)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.TotalDistance)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.TotalDistance)
+            </dd>
+
+            @Html.ActionLink("Edit Information", "PassengerEdit", new { id = Model.PassengerID })
+
+            <dd>
+                <div id="divCanvas">
+                    <canvas id='myCanvas' width='1000' height='150'></canvas>
+                </div>
+            </dd>
+
+        </dl>
+    </div>
+}
+    <!--canvas spaceship -->
+    @*@Scripts.Render("~/Content/js/canvas.js")*@
+    @section Scripts{
+        <script src="~/Content/js/canvas.js"></script>
+        <script>$(document).ready(canvasFunc());</script>
+    }
