--- a/SpaceWay/Views/Flights/SearchFlight.cshtml
+++ b/SpaceWay/Views/Flights/SearchFlight.cshtml
@@ -52,7 +52,7 @@
                 <div class="col">
                     <div class="form-group">
                         <label>Outbound Date:</label><br />
-                        <input id="departure" name="departure" type="date" />
+                        <input id="departure" name="departure" type="date" required>
                     </div>
                 </div>
             </div>
