--- a/SpaceWay/Views/Aircrafts/Delete.cshtml
+++ b/SpaceWay/Views/Aircrafts/Delete.cshtml
@@ -3,38 +3,56 @@
 @{
     ViewBag.Title = "Delete";
 }
+@if ((string)Session["isAdmin"] == "0" || Session["Username"] == null)
+{
+    <h4>You have no permissions to display this page.</h4>
+}
+else
+{
+        <div class="container">
+            <h2>Delete</h2>
+            <div class="row">
+                <div class="col">
+                    <h4>Aircraft</h4>
+                    <hr />
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Level)
+                        </dt>
 
-<h2>Delete</h2>
+                        <dd>
+                            @Html.DisplayFor(model => model.Level)
+                        </dd>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Aircraft</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Level)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Seats)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Level)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.Seats)
+                        </dd>
+                    </dl>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-6">
+                    <h4>Are you sure you want to delete this?</h4><br />
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-2">
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Seats)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Seats)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                        <div class="form-actions no-color">
+                            <input type="submit" value="Delete" class="btn btn-default" />
+                        </div>
+                    }
+                </div>
+                <div class="col-2">
+                    @Html.ActionLink("Back to List", "Index")
+                </div>
+            </div>
         </div>
-    }
-</div>
+}
