--- a/SpaceWay/Views/Flights/SearchFlight.cshtml
+++ b/SpaceWay/Views/Flights/SearchFlight.cshtml
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <br/>
+                    <br />
                     <h4>Book A Flight</h4>
                     <hr />
                 </div>
@@ -24,7 +24,7 @@
                 <div class="col">
                     <div class="form-group">
                         <label>Aircraft's level:</label>
-                        <select class = "form-control" id="lvl" name="lvl">
+                        <select class="form-control" id="lvl" name="lvl">
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                        <label>Inbound Date:</label><br/>
+                        <label>Inbound Date:</label><br />
                         <input id="arrival" name="arrival" type="date" />
                     </div>
                 </div>
@@ -69,17 +69,19 @@
                     <div class="form-group">
                         <br />
                         <input type="button" id="fakeSubmit" onclick="load();" value="Search Flight" class="btn btn-default" />
-                        <input type="submit"  style="display: none;"/>
+                        <input type="submit" style="display: none;" />
                     </div>
                 </div>
             </div>
-         
+
         </div>
         <div class="form-group">
         </div>
     </div>
 }
-
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
 <div class="loader" id="loader"></div>
 
 <!--design for popUp -->
@@ -90,37 +92,39 @@
 
 
 
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
+<!-- The Modal -->
+<div id="myModal" class="modal">
 
-        <!-- Modal content -->
-        <div class="modal-content">
-            <div class="modal-header" >
-                <span class="close">&times;</span>
-                <p ><b>Today's Special Offer</b></p>
-            </div>
-            <div class="modal-body">
-                <h3><b>Take a Flight to</b></h3>
-                <h3><b>@ViewBag.FaveStation</b></h3>
-                <p><b>and you won't gonna regret it</b></p>
-            </div>
-            <div class="modal-footer">
-                <p ><b>Don't Miss It !!</b></p>
-            </div>
+    <!-- Modal content -->
+    <div class="modal-content">
+        <div class="modal-header">
+            <span class="close">&times;</span>
+            <p><b>Today's Special Offer</b></p>
+        </div>
+        <div class="modal-body">
+            <h3><b>Take a Flight to</b></h3>
+            <h3><b>@ViewBag.FaveStation</b></h3>
+            <p><b>and you won't gonna regret it</b></p>
+        </div>
+        <div class="modal-footer">
+            <p><b>Don't Miss It !!</b></p>
         </div>
     </div>
+</div>
 
-    @section Scripts {
- <!-- PopUp js -->
- <script src="~/Content/js/popUp.js"></script>
 
-<!-- Loader js -->
-<script src="~/Content/js/Loader.js"></script>
 
-<!-- activate popUp only if the name of the station came from the controller-->
-<script>if ('@ViewBag.FaveStation') {popUp(); }</script>
+@section Scripts {
+    <!-- PopUp js -->
+    <script src="~/Content/js/popUp.js"></script>
 
-@Scripts.Render("~/bundles/jqueryval")
-        
-    }
+    <!-- Loader js -->
+    <script src="~/Content/js/Loader.js"></script>
+
+    <!-- activate popUp only if the name of the station came from the controller-->
+    <script>if ('@ViewBag.FaveStation') {popUp(); }</script>
+
+    @Scripts.Render("~/bundles/jqueryval")
+
+}
 
