--- a/SpaceWay/Views/Passengers/Index.cshtml
+++ b/SpaceWay/Views/Passengers/Index.cshtml
@@ -15,7 +15,7 @@
         </fieldset>
     </form>
 </div>
-
+@Html.ActionLink("Display Passengers' Destination List", "JoinPassengersAndDestinations")
 <table class="table" id="resultsTable">
     <thead>
         <tr>
