--- a/SpaceWay/Views/Flights/SearchFlightResultsIn.cshtml
+++ b/SpaceWay/Views/Flights/SearchFlightResultsIn.cshtml
@@ -101,5 +101,5 @@
     }
 </div>
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Search", "SearchFlight")
 </div>
