--- a/SpaceWay/Views/Flights/Edit.cshtml
+++ b/SpaceWay/Views/Flights/Edit.cshtml
@@ -3,104 +3,117 @@
 @{
     ViewBag.Title = "Edit";
 }
-
-<h2>Edit</h2>
-
-
-@using (Html.BeginForm())
+@if ((string)Session["isAdmin"] == "0" || Session["Username"] == null)
 {
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Flight</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.FlightID)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.NumOfPassengers, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NumOfPassengers, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NumOfPassengers, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.AircraftID, "AircraftID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("AircraftID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.AircraftID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.OriginID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.OriginID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OriginID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DestinationID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DestinationID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DestinationID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Duration, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Duration, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Duration, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Distance, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Distance, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Distance, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Departure, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Departure, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Departure, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Arrival, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Arrival, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Arrival, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
+    <h4>You have no permissions to display this page.</h4>
 }
+else
+{
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        <div class="container">
+            <div class="row m-sm-3">
+                <div class="col">
+            <h4>Flight Edit</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.FlightID)
+                </div>
+            </div>
+            <div class="row m-sm-3">
+                <div class="col-3">
+                    @Html.LabelFor(model => model.NumOfPassengers, htmlAttributes: new { @class = "control-label col-md-2" })
+                </div>
+                <div class="col-3">
+                    @Html.EditorFor(model => model.NumOfPassengers, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.NumOfPassengers, "", new { @class = "text-danger" })
+                </div>
+                <div class="col-3">
+                    @Html.LabelFor(model => model.AircraftID, "AircraftID", htmlAttributes: new { @class = "control-label col-md-2" })
+                    </div>
+                    <div class="col-3">
+                        @Html.DropDownList("AircraftID", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.AircraftID, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="row m-sm-3">
+                    <div class="col-3">
+                        @Html.LabelFor(model => model.OriginID, htmlAttributes: new { @class = "control-label col-md-2" })
+                    </div>
+                    <div class="col-3">
+                        @Html.EditorFor(model => model.OriginID, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.OriginID, "", new { @class = "text-danger" })
+                    </div>
+               
+                    <div class="col-3">
+                    @Html.LabelFor(model => model.DestinationID, htmlAttributes: new { @class = "control-label col-md-2" })
+                    </div>
+                    <div class="col-3">
+                        @Html.EditorFor(model => model.DestinationID, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.DestinationID, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="row m-sm-3">
+                    <div class="col-3">
+                    @Html.LabelFor(model => model.Duration, htmlAttributes: new { @class = "control-label col-md-2" })
+                    </div>
+                    <div class="col-3">
+                        @Html.EditorFor(model => model.Duration, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Duration, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-3">
+                    @Html.LabelFor(model => model.Distance, htmlAttributes: new { @class = "control-label col-md-2" })
+                    </div>
+                    <div class="col-3">
+                        @Html.EditorFor(model => model.Distance, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Distance, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="row m-sm-3">
+                    <div class="col-3">
+                    @Html.LabelFor(model => model.Departure, htmlAttributes: new { @class = "control-label col-md-2" })
+                    </div>
+                    <div class="col-3">
+                        @Html.EditorFor(model => model.Departure, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Departure, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-3">
+                    @Html.LabelFor(model => model.Arrival, htmlAttributes: new { @class = "control-label col-md-2" })
+                    </div>
+                    <div class="col-3">
+                        @Html.EditorFor(model => model.Arrival, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Arrival, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="row m-sm-3">
+                    <div class="col-3">
+                        @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+                    </div>
+                    <div class="col-3">
+                        @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-3">
+                        <input type="submit" value="Save" class="btn btn-default" />
+                    </div>
+                    <div class="col-3">
+                        <div>
+                            @Html.ActionLink("Back to List", "Index")
+                        </div>
+                    </div>
+                </div>
+
+                
+            </div>
+    }
+
+    }
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
