--- a/SpaceWay/Views/Flights/SearchFlight.cshtml
+++ b/SpaceWay/Views/Flights/SearchFlight.cshtml
@@ -7,12 +7,9 @@
 @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "MyForm" }))
 {
     @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-        <div class="container">
+    <div class="container">
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="row">
                 <div class="col">
                     <br />
@@ -31,8 +28,6 @@
                         </select>
                     </div>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col">
                     <div class="form-group">
                         <label>Origin:</label>
@@ -47,8 +42,6 @@
                         @Html.DropDownList("DestinationID", null, htmlAttributes: new { @class = "form-control" })
                     </div>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col">
                     <div class="form-group">
                         <label>Outbound Date:</label><br />
@@ -63,6 +56,10 @@
                         <input id="arrival" name="arrival" type="date" />
                     </div>
                 </div>
+                <div class="col form-group">
+                    <label>Tickets:</label><br />
+                    <input id="tickets" name="tickets" type="text" required />
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-offset-2 col-md-10">
@@ -73,9 +70,6 @@
                     </div>
                 </div>
             </div>
-
-        </div>
-        <div class="form-group">
         </div>
     </div>
 }
