--- a/SpaceWay/Views/Reservations/NewReservation.cshtml
+++ b/SpaceWay/Views/Reservations/NewReservation.cshtml
@@ -74,15 +74,14 @@
         <div class="form-horizontal">
             <dl class="dl-horizontal">
                 <dt>
-                    @Html.Label("Number Of Passengers")
+                    @Html.Label("Number Of Passengers:")
+
                 </dt>
 
                 <dd>
-
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.NumOfTickets, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.NumOfTickets, "", new { @class = "text-danger" })
-                        </div>
+                    <div class="col-md-10">
+                    @Html.DisplayFor(model => model.NumOfTickets)
+                    </div>
 
                 </dd>
             </dl>
